@@ -1,3 +1,4 @@
+* Don't allow to use float in Numeric fields
 * set/get function on Fields take a list of ids
 * New interface for Function/Property fields
   Take a Field as first argument instead of many separate arguments
